[package]
name = "service-desk-automation"
version = "0.1.0"
edition = "2024"

[dependencies]
# Para requisições HTTP
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
tokio = { version = "1.47.1", features = ["full"] }

# Para a serialização/desserialização do JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Para automação web com o Selenium
thirtyfour = "0.6"

# Para expressões regulares
regex = "1.11.1"